Lagt til nytt endepunkt for sletting